# hermes-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SOUL.md  batch_runner.py  cli-config.yaml.example  cli.py  decisions.md  feature.md  hermes_constants.py  hermes_logging.py  hermes_state.py  mcp_serve.py  modal_app.py  model_tools.py  package-lock.json  package.json  pr-body.md  pyproject.toml  requirements.txt  run_agent.py  serve.py  setup-hermes.sh  spec.md  toolset_distributions.py  toolsets.py  trajectory_compressor.py  utf8_bootstrap.py  workspace-findings.md
.github/: PULL_REQUEST_TEMPLATE.md
.plans/: wallet-architecture.md
acp_adapter/: auth.py  entry.py  events.py  server.py  session.py  tools.py
agent/: agent_init.py  anthropic_adapter.py  auxiliary_client.py  codex_cli_client.py  codex_responses_adapter.py  context_compressor.py  conversation_compression.py  credential_pool.py  display.py  error_classifier.py  google_workspace_oauth.py  insights.py  memory_manager.py  memory_provider.py  model_metadata.py  moonshot_schema.py  prompt_builder.py  prompt_caching.py  provider_tweaks.py  rate_limiter.py  redact.py  shell_hooks.py  skill_commands.py  skill_utils.py  system_prompt.py  trajectory.py  usage_pricing.py  workspace.py
apps/: README.md
apps/gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/gui/src-tauri/capabilities/: default.json
apps/gui/src-tauri/src/: lib.rs  main.rs
cron/: __init__.py  jobs.py  scheduler.py
datagen-config-examples/: run_browser_tasks.sh  web_research.yaml
docker/: entrypoint.sh
docs/: acp-setup.md  credential-pool-flow.excalidraw  nixos-setup.md  workspace-knowledgebase-rag-spec.md
environments/: agent_loop.py  hermes_base_env.py
gateway/: __init__.py  agent_registry.py  channel_directory.py  config.py  delivery.py  hooks.py  mirror.py  pairing.py  router.py  run.py  session.py  status.py  sticker_cache.py  stream_consumer.py
hermes_agent/: __init__.py
hermes_cli/: __init__.py  auth.py  auth_commands.py  banner.py  callbacks.py  cli_output.py  clipboard.py  codex_models.py  commands.py  config.py  cron.py  dep_ensure.py  doctor.py  gateway.py  kanban.py  kanban_db.py  learning_ledger.py  main.py  mcp_catalog.py  mcp_picker.py  memory_setup.py  model_switch.py  models.py  nous_subscription.py  pairing.py  platforms.py  plugins_cmd.py  profiles.py  providers.py  proxy_cli.py  runtime_provider.py  setup.py  skills_hub.py  skin_engine.py  status.py  telegram_managed_bot.py  tips.py  tools_config.py  trust.py  uninstall.py  (+5 more)
keystore/: __init__.py  categories.py  cli.py  client.py  credential_store.py  store.py
landingpage/: index.html  script.js  style.css
nix/: checks.nix  hermes-agent.nix  nixosModules.nix  packages.nix  web.nix
providers/: alibaba.py  arcee.py  bedrock.py  copilot.py  copilot_acp.py  custom.py  huggingface.py  kilocode.py  kimi.py  minimax.py  ollama_cloud.py  opencode.py  qwen.py  stepfun.py  xai.py  zai.py
scripts/: batch_runner.py  benchmark_click_paths.py  hermes-gateway  install.ps1  install.sh  mini_swe_runner.py  release.py  restructure_move_map.py  rl_cli.py  sample_and_compress.py  trajectory_compressor.py  verify_anthropic_pixel_cap.py
tests/: test_anthropic_adapter.py  test_anthropic_error_handling.py  test_api_key_providers.py  test_auth_nous_provider.py  test_batch_runner_checkpoint.py  test_cli_init.py  test_compression_config.py  test_context_editing.py  test_context_warning.py  test_env_backend_compat.py  test_file_permissions.py  test_hermes_constants.py  test_hermes_logging.py  test_hermes_state.py  test_ipv4_preference.py  test_iron_proxy.py  test_iron_proxy_e2e.py  test_mcp_serve.py  test_mistral_structured_content.py  test_model_switch.py  test_model_tools.py  test_run_agent.py  test_run_agent_codex_responses.py  test_serve.py  test_streaming.py  test_timezone.py  test_toolsets.py  test_trajectory_compressor.py  test_trajectory_compressor_async.py  test_transform_tool_result_hook.py  test_tui_gateway_server.py  test_utf8_bootstrap.py  test_workspace_cli_command.py
tools/: __init__.py  app_tools.py  approval.py  browser_supervisor.py  browser_tool.py  clarify_tool.py  code_execution_tool.py  cronjob_tools.py  debug_helpers.py  delegate_tool.py  file_operations.py  file_tools.py  fuzzy_match.py  homeassistant_tool.py  honcho_tools.py  image_generation_tool.py  kanban_tools.py  (+30 more)
(+645 files in other folders)
